fix css overflow towards right + updates

--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -57,7 +57,7 @@
 
   .Stars1 {
     height: 100vh;
-    width: auto;
+    max-width: 100vh;
     left: 4%;
     top: auto;
     position: absolute;
