--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -21,7 +21,7 @@
     background: #53171b;
     position: absolute;
     height: auto;
-    width: 100vw;
+    width: 100%;
     color: #dcd1b2;
     font-family: "poppins";
     justify-content: center;
