--- a/src/styles/readersForum.scss
+++ b/src/styles/readersForum.scss
@@ -14,12 +14,10 @@
     justify-content: center;
     align-items: center;
     margin-top: 50px;
-    width:88%;
-    
+    width: 88%;
   }
-  .book{
-    width:100px;
-    
+  .book {
+    width: 100px;
   }
   .head {
     font-family: Stoke;
@@ -30,25 +28,24 @@
     text-align: center;
     color: rgba(246, 247, 208, 0.83);
   }
-  
+
   .child {
     width: 576px;
     height: 491px;
     filter: blur(1px);
     border-radius: 30%;
     align-self: center;
-    margin-top:10px  ;
-    padding: 0 30px ;
+    margin-top: 10px;
+    padding: 0 30px;
     margin-bottom: 20px;
   }
-  .Stars{
+  .Stars {
     position: absolute;
-    width: auto;
     height: auto;
     border-radius: 0px;
   }
-  .stars{
-    height:0;
+  .stars {
+    height: 0;
   }
   .flexbox-3 {
     font-family: Poppins;
@@ -60,7 +57,7 @@
   p {
     text-align: center;
     line-height: 143.5%;
-    color: #EDD7B8;;
+    color: #edd7b8;
   }
   .book1 {
     width: 0;
@@ -101,9 +98,9 @@
       height: 182.87px;
       border-radius: 30%;
       filter: blur(0);
-      margin-top:0px;
+      margin-top: 0px;
       margin-bottom: 20px;
-      padding:0;
+      padding: 0;
     }
     p {
       font-style: normal;
@@ -111,7 +108,6 @@
       font-size: 22px;
       line-height: 143.5%;
       text-align: center;
-      
     }
     .flexbox-3 {
       width: 264px;
@@ -125,16 +121,16 @@
       padding-top: 50.4px;
       right: 44.73%;
     }
-    .Stars{
-      display:none;
+    .Stars {
+      display: none;
     }
-    .stars{
+    .stars {
       width: 100%;
       height: auto;
       top: 10px;
       border-radius: 0px;
       position: absolute;
-      image-resolution: 1080px; 
+      image-resolution: 1080px;
     }
   }
 }
